--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
-  "presets": ["@vue/app", ["@babel/preset-env", { "modules": false }]],
+  "presets": ["@vue/app", [
+    "@babel/preset-env", 
+    { 
+      "modules": false
+    }
+  ]],
   "plugins": [
     [
       "import",
