--- a/package.json
+++ b/package.json
@@ -56,18 +56,18 @@
     "eslint": "^7.32.0",
     "eslint-config-elemefe": "^0.3.0",
     "eslint-plugin-vue": "^6.2.2",
+    "imd-loader": "^1.0.0",
     "json-templater": "^1.2.0",
-    "markdown-it": "^12.0.2",
-    "markdown-it-anchor": "^6.0.0",
+    "markdown-it": "^12.2.0",
+    "markdown-it-anchor": "^8.4.1",
     "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
-    "markdown-loader": "^6.0.0",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.2.3",
-    "transliteration": "^2.1.11",
+    "transliteration": "^2.2.0",
     "uppercamelcase": "^3.0.0",
     "url-loader": "^4.1.1",
     "vue": "^2.6.12",
@@ -97,5 +97,10 @@
         }
       ]
     }
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
