--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "lint": "vue-cli-service lint",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:file": "node build/bin/iconInit.js",
     "build:entry": "node build/bin/build-entry",
     "build:demo": "node build/bin/build-demo",
     "build:utils": "cross-env BABEL_ENV=utils babel src --out-dir lib --ignore src/index.js",
     "build:lib": "webpack --config build/webpack.conf.js && webpack --config build/webpack.common.js && webpack --config build/webpack.component.js && npm run build:utils",
     "pub": "npm run bootstrap && sh build/git-release.sh && sh build/release.sh"
-    
   },
   "dependencies": {
     "array-find-index": "^1.0.2",
@@ -62,6 +62,7 @@
     "json-templater": "^1.2.0",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "^4.14.1",
+    "postcss": "^8.3.11",
     "sass-loader": "^10.0.4",
     "select-version-cli": "^0.0.2",
     "style-loader": "^2.0.0",
