补充说明文档

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "dev": "npm run bootstrap && npm run build:entry && npm run serve",
     "bootstrap": "yarn || npm i",
     "lint": "vue-cli-service lint",
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --fix",
     "build": "vue-cli-service build",
-    "build:file": "node build/bin/iconInit.js",
+    "build:file": "node build/bin/iconInit.js && node build/bin/componentInit.js",
     "build:entry": "node build/bin/build-entry",
     "build:demo": "node build/bin/build-demo",
     "build:utils": "cross-env BABEL_ENV=utils babel src --out-dir lib --ignore src/index.js",
